--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -147,11 +147,8 @@ tiger$cropxy(0,10,0,10)
 ```
 
 ## Using the Shiny GUI
-```{r fig.width=5, fig.height=3,echo=FALSE}
-library(png)
-library(grid)
-img <- readPNG("ShinyPreview.png")
- grid.raster(img)
+```{r, out.width = "600px"}
+knitr::include_graphics("ShinyPreview.png")
 ```
 
 #### Starting the Shiny GUI
