--- a/vignettes/my-vignette2.Rmd
+++ b/vignettes/my-vignette2.Rmd
@@ -1,13 +1,5 @@
----
-title: "ShinyImage"
-author: "Norm Matloff, Alex Fu, Ariel Shin"
-date: "`r Sys.Date()`"
-output: html_vignette
-vignette: >
-  %\VignetteIndexEntry{Vignette Title}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
----
+
+# ShinyImage
 
 Imaging package, with an emphasis on *journaling*, i.e.  recording
 history of changes.  Undo/redo operations, ability to display multiple
@@ -206,7 +198,7 @@ export LIBRARY_PATH=y/lib
 </p>
 
 <pre>
-sudo apt-get install libtiff-devel
+sudo apt-get install libtiff-dev
 </pre>
 </li> </p> 
 
@@ -214,9 +206,19 @@ sudo apt-get install libtiff-devel
 </p>
 
 <pre>
-sudo apt-get install fftw-devel
+sudo apt-get install fftw-dev
 </pre>
 </li> </p> 
+
+<li> If fftw library does not get properly installed, try
+</p>
+
+<pre>
+sudo apt-get install fftw3 fftw3-dev pkg-config
+</pre>
+</li> </p> 
+
+
 
 <li> Then run the R steps as above.
 </li> </p>
