--- a/vignettes/my-vignette2.Rmd
+++ b/vignettes/my-vignette2.Rmd
@@ -1,5 +1,13 @@
-
-# ShinyImage
+---
+title: "ShinyImage"
+author: "Norm Matloff, Alex Fu, Ariel Shin"
+date: "`r Sys.Date()`"
+output: html_vignette
+vignette: >
+  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
+---
 
 Imaging package, with an emphasis on *journaling*, i.e.  recording
 history of changes.  Undo/redo operations, ability to display multiple
