--- a/vignettes/SI.Rmd
+++ b/vignettes/SI.Rmd
@@ -1,13 +1,17 @@
+
 ---
-title: "ShinyImage"
-author: "Norm Matloff, Alex Fu, Ariel Shin"
+title: 'cdparcoord: Categorical and Discrete Parallel Coordinates'
+author: "Norm Matloff, Harrison Nguyen and Vincent Yang"
 date: "`r Sys.Date()`"
-output: html_vignette
+output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
+
+
+# ShinyImage
 
 Imaging package, with an emphasis on *journaling*, i.e.  recording
 history of changes.  Undo/redo operations, ability to display multiple
@@ -74,11 +78,7 @@ operations and also to show the journaling.  All operations will use the
 R command line; examples of the GUI are given later in this document.
 
 ```R
-#  load image, whether local file or from the Web
-#  the image being used is titled 'A tiger in the water'
-#  By Bob Jagendorf 
-#  [CC BY 2.0 (http://creativecommons.org/licenses/by/2.0)], 
-#  via Wikimedia Commons
+# load image, whether local file or from the Web
 > tiger <- 
    shinyimg$new("https://upload.wikimedia.org/wikipedia/commons/1/1c/Tigerwater_edit2.jpg")
 
@@ -138,13 +138,6 @@ R command line; examples of the GUI are given later in this document.
 > tiger$load("tiger-water.si")
 # this will load the image back to the state it was in when you saved the image.
 > tiger$undo()  # not too late to undo changes made before the save!
-
-# lastly, if we want to save the physical image
-> tiger$saveImage('tiger.jpg')
-# we can save it as either jpg, png, or tiff
-> tiger$saveImage('tiger.png')
-# if a user does not specify the name, the default is temp.jpeg
-> tiger$saveImage()
 ```
 
 ## GUI Installation and Usage
@@ -177,14 +170,6 @@ Run these commands from within R.
 
 ```R
 > runShiny()
-```
-
-<li> A user can use an image they are currently editing on the commandline to edit in the GUI
-</p>
-
-```R
-# using our previous example of our shinyimg object tiger
-> runShiny(tiger)
 ```
 
 <h3>
